# rust-app

./: .gitignore  ARCHITECTURE.md  MIGRATION.md  PHASE-1.1-COMPLETE.md  PHASE-1.2-COMPLETE.md  PHASE-1.3-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-3-COMPLETE.md  PHASE-4-COMPLETE.md  README.md  TODO.md  eslint.config.js  index.html  info.md  package-lock.json  package.json  setup.sh  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db_types.rs  lib.rs  main.rs
src-tauri/src/commands/: client_cmds.rs  excel_cmds.rs  file_ops.rs  import_cmds.rs  invoice_cmds.rs  ledger_cmds.rs  mod.rs  pdf_cmds.rs  product_cmds.rs  quotation_cmds.rs  ref_number.rs  settings_cmds.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/exporters/: excel_exporter.rs  mod.rs  pdf_exporter.rs
src-tauri/src/importers/: mod.rs  product_importer.rs
src-tauri/src/models/: client.rs  invoice.rs  ledger.rs  mod.rs  product.rs  quotation.rs  settings.rs
src-tauri/src/repositories/: client_repo.rs  invoice_repo.rs  ledger_repo.rs  mod.rs  product_repo.rs  quotation_repo.rs  settings_repo.rs
src-tauri/src/services/: client_service.rs  invoice_service.rs  ledger_service.rs  mod.rs  product_service.rs  quotation_service.rs  settings_service.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: currency.rs  mod.rs  validation.rs
src/components/: AutocompleteLineEdit.vue  ExportSuccessDialog.vue  (+1 more)
(+30 files in other folders)
