[package]
name = "zahra-invoice-desktop"
version = "0.1.0"
description = "Zahra Enterprises Invoice Generator - Tauri v2 Desktop App"
authors = ["Zahra Enterprises"]
edition = "2024"

[lib]
name = "zahra_invoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Tauri plugins (frontend-accessible)
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (direct Rust access, not through tauri-plugin-sql to avoid conflicts)
rusqlite = { version = "0.39", features = ["bundled", "serde_json"] }

# Error handling
thiserror = "2"

# Decimal arithmetic for currency
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }

# Fuzzy search
strsim = "0.11"

# Excel export/import
rust_xlsxwriter = "0.80"
calamine = "0.28"

# PDF text extraction
pdf-extract = "0.7"

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

